B2BS-126: Fixed alignment of icons in sidbar menu.

--- a/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/navigation-sidebar-item/navigation-sidebar-item.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/navigation-sidebar-item/navigation-sidebar-item.scss
@@ -24,7 +24,8 @@
         &__icon-wrapper {
             padding: 0 rem(15) 0 0;
             min-width: rem(50);
-            text-align: center;
+            display: flex;
+            justify-content: center;
         }
     }
 }
